--- a/Profile.html
+++ b/Profile.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="Education.css">
     <link rel="stylesheet" href="skills.css">
+    <link rel="stylesheet" href="projects.css">
+
 </head>
 <body>
     <header>
@@ -176,9 +178,30 @@
                             <li>MS Word</li>
                             <li>MS PowerPoint</li>
                             <li>MS Excel</li>
+                            <li>VS Code</li>
                         </ul>
                     </div>
                 </li>
+            </ul>
+        </div>
+    </div>
+    <hr id="skill_hr"/>
+<!--------------------------------------------------------------------------------------------------------------------------------------------------------->
+    <div class="projects" id="projects" style="display: grid;">
+        <div id="pro_tit">
+            <p id="pro_cont"><b>PROJECTS</b></p>
+        </div>
+        <div class="pro_cont" id="pro_cont" style="display: grid;">
+            <ul class="pc">
+                <li><div class="pro_head"><p><b>Smart Irrigation Management</b></p></div>
+                <div class="pro_content"><p>Utilized embedded systems and IoT to develop a smart irrigation solution.<br>
+                    Implemented automated water supply based on soil moisture levels.<br>
+                    Used sensors and actuators to control the irrigation process, enhancing water conservation.<br>
+                    Duration: 3 months</p></div></li>
+                <li><div class="pro_head"><p><b>Developed a Login Page</b></p></div>
+                <div class="pro_content"><p>Technologies Used: HTML, CSS<br>
+                    Description: Designed and implemented a responsive login page, focusing on user-friendly navigation and a clean, modern interface.<br>
+                    Duration: 10 days</p></div></li>
             </ul>
         </div>
     </div>
