removed resume link

--- a/Profile.html
+++ b/Profile.html
@@ -62,7 +62,7 @@
                         <img src="linkedin_icon.png" width="19px" hight="19px" style="padding-left: 45px;">
                     </div>
                     <div id="linkedin_link">
-                        <a href="https://www.linkedin.com/in/rogul-jayaraman/" title="Click to open Linkesin account" id="linkedin" style="margin-top: -18px; padding-left:7px;">Linkedin</a>
+                        <a href="" title="Click to open Linkesin account" id="linkedin" style="margin-top: -18px; padding-left:7px;">Linkedin</a>
                     </div>
                     <div id="resume_image">
                         <img src="resume_icon.png" width="19px" hight="19px">
